<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="90">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:layout_weight="30"
            android:background="@color/bg_button_login_blue"
            android:id="@+id/blue" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:layout_weight="30"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/green" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:layout_weight="30"
            android:id="@+id/yellow" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:weightSum="90">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gray"
            android:layout_weight="30"
            android:id="@+id/gray" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="30"
            android:id="@+id/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange"
            android:id="@+id/orange"
            android:layout_weight="30"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="90">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink"
            android:id="@+id/pink"
            android:layout_weight="30"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black"
            android:id="@+id/black"
            android:layout_weight="30"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purple"
            android:id="@+id/purple"
            android:layout_weight="30"/>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="5dp"
        android:id="@+id/cancel" />
</LinearLayout>
