<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_mood"
            android:layout_marginLeft="30dp"
            android:id="@+id/ivMood"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_solid"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:id="@+id/ivSolid" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivBottle"
            android:layout_gravity="right"
            android:background="@drawable/ic_bottle"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/mood"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtMood" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="45dp"
            android:text="@string/solid"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtSolid" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/bottle"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtBottle" />

    </LinearLayout>
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_breastfeed"
        android:layout_marginLeft="30dp"
        android:id="@+id/ivBreast" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/result"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:id="@+id/ivSleep" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivDiaper"
        android:layout_gravity="right"
        android:background="@drawable/ic_diaper"/>
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/breast"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtBreast" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="40dp"
            android:text="@string/sleep"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtSleep"/>
        S

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:text="@string/diaper"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtDiaper" />

    </LinearLayout>
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_pumping_milk"
        android:layout_marginLeft="30dp"
        android:id="@+id/ivPumping" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_health"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:id="@+id/ivHealth" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivMedicine"
        android:layout_gravity="right"
        android:background="@drawable/ic_medicine"/>
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/pumping"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtPumping" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="40dp"
            android:text="@string/health"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtHealth"/>
        S

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/medicine"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtMedicine" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_vaccination"
            android:layout_marginLeft="30dp"
            android:id="@+id/ivVaccination" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_hygiene"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:id="@+id/ivHygiene" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivTeeth"
            android:layout_gravity="right"
            android:background="@drawable/ic_teeth"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/vaccination"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtVaccination" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="40dp"
            android:text="@string/hygiene"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtHygiene"/>
        S

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/teeth"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/txtTeeth" />

    </LinearLayout>
</LinearLayout>